Item1751: Escaping the ' sign in all the .po language files wherever escaping is needed
git-svn-id: http://svn.foswiki.org/trunk@4193 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/fi.po
+++ b/core/locale/fi.po
@@ -3166,7 +3166,7 @@ msgstr "vinkkejä hyvään tyyliin"
 
 #: core/templates/more.tmpl:107
 msgid "in raw text format"
-msgstr "raa'assa tekstimuodossa"
+msgstr "raa\\'assa tekstimuodossa"
 
 #: core/templates/form.tmpl:3
 msgid "indicates mandatory fields"
